Add skeleton for other readings groups

--- a/readings.html
+++ b/readings.html
@@ -813,6 +813,220 @@
 
                     </div>
                 </div>
+
+
+
+
+                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
             </div>
         </section>
 
