Add readings to new carousel

--- a/readings.html
+++ b/readings.html
@@ -659,9 +659,58 @@
                             </a>
                         </article>
                         <!-- Расклады про любовь - НА НЫНЕШНЕГО - 4 - 7 ЗВЕЗД НА ТЕКУЩИЕ ОТНОШЕНИЯ -->
-                        <!-- TO FIX -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                7 ЗВЕЗД НА ТЕКУЩИЕ ОТНОШЕНИЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li>ВАША ЗВЕЗДА - карта которая говорит о вас и о ситуации, в которой вы находитесь</li>
+                                <li>ЗВЕЗДА ИЗБРАННИКА - карта описывает личности избранника</li>
+                                <li>ЗВЕЗДА ЛЮБВИ - карта говорит о связи между вами</li>
+                                <li>ЗВЕЗДА ОПАСНОСТИ - карта предупреждает о возможных преградах для вашей любви</li>
+                                <li>ЗВЕЗДА УДАЧИ - карта говорит о том, что поможет вашей любви</li>
+                                <li>ЗВЕЗДА ТАЙНЫХ МЫСЛЕЙ - карта помогает понять, о чём ваш избранник умалчивает?</li>
+                                <li>Отдалённая перспектива ваших отношений?</li>
+                                <li>ЗВЕЗДА БУДУЩЕГО - карта показывает, что ожидает ваш союз в будущем</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
                         <!-- Расклады про любовь - НА НЫНЕШНЕГО - 5 - СУДЬБА ЛИ ОН -->
-                        <!-- TO FIX -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                СУДЬБА ЛИ ОН
+                            </h3>
+                            <p class="reading-lead">
+                                в раскладе участвует семь карт, символизирующие семь звёзд вашей судьбы. это те скрытые
+                                силы, который определяет ваши отношения с любимым человеком
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Краткая характеристика личности мужчины на данный момент. Что Вам необходимо знать о
+                                    нём?</li>
+                                <li>Как он относится к вам? Что чувствует?</li>
+                                <li>Каковы цели в ваших отношениях? К какому формату он стремится?</li>
+                                <li>Для чего этот человек вошёл в вашу жизнь?</li>
+                                <li>Как вы будете себя чувствовать в этих отношениях в будущем?</li>
+                                <li>Перспектива ваших отношений в ближайшем будущем?</li>
+                                <li>Отдалённая перспектива ваших отношений?</li>
+                                <li>Есть ли перспектива брака?</li>
+                                <li>Как эти отношения повлияют на вашу жизнь?</li>
+                                <li>Если вы расстанетесь, ваше личная жизнь без этого мужчины,
+                                    как она сложится?</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
                         <!-- Расклады про любовь - НА НЫНЕШНЕГО - 6 - ПЕРСПЕКТИВЫ ОТНОШЕНИЙ -->
                         <article class="reading-card">
                             <h3 class="reading-title">
@@ -673,44 +722,36 @@
                             </p>
                             <!-- TO FIX -->
                             <ul class="reading-questions">
-                                <li class="reading-questions-with-title">
-                                    <p class="reading-questions-title">
-                                        отношения
-                                    </p>
-                                    <ul class="reading-questions">
-                                        <li>
-                                            сейчас как будут развиваться ваши отношения в начале
-                                        </li>
-                                        <li>
-                                            потом, то что будет с отношениями дальше
-                                        </li>
-                                        <li>
-                                            после чего можно ожидать ваших взаимоотношениях после.
-                                        </li>
-                                    </ul>
+                                <li>
+                                    Сейчас как будут развиваться ваши отношения в начале
                                 </li>
-                                <li class="reading-questions-with-title">
-                                    <p class="reading-questions-title">
-                                        чувство, мысли
-                                    </p>
-                                    <ul class="reading-questions">
-                                        <li>
-                                            Ваши мысли о нём
-                                        </li>
-                                        <li>
-                                            Ваши чувства к нему.
-                                        </li>
-                                        <li>
-                                            Ваши действия
-                                        </li>
-                                    </ul>
+                                <li>
+                                    Потом. Что будет с отношениями дальше
                                 </li>
-                                <li class="reading-questions-with-title">
-                                    <p class="reading-questions-title">
-                                        Перспектива отношений
-                                    </p>
+                                <li>
+                                    После. Чего можно ожидать в ваших взаимоотношениях после.
                                 </li>
-                            </ul>
+                                <li>
+                                    Ваши чувства и отношения в ближайшее время.
+                                </li>
+                                <li>
+                                    Его чувства, мысли и ощущения.
+                                </li>
+                                <li>
+                                    Ваши действия в отношении ближайшее время.
+                                </li>
+                                <li>
+                                    Действия вашего любимого в ближайшей перспективе.
+                                </li>
+                                <li>
+                                    Действия, которые вам не стоит предпринимать.
+                                </li>
+                                <li>
+                                    Совет - как Вам следует себя вести
+                                </li>
+                                <li>
+                                    Перспектива отношений.
+                                </li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">4 000 ₽</p>
@@ -810,7 +851,6 @@
                                 Запросить расклад
                             </a>
                         </article>
-
                     </div>
                 </div>
 
@@ -832,6 +872,110 @@
                         <article class="reading-card">
                             <h3 class="reading-title">
                                 УЙТИ ИЛИ ОСТАТЬСЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Подсознательные причины, который мешает уйти из отношений</li>
+                                <li>Осознанные причины которые не дают уйти из отношений</li>
+                                <li>Что будет в личной жизни если уйдёте из отношений?</li>
+                                <li>Что будет личная жизнь если вы останетесь в отношениях?</li>
+                                <li>Реакция мужчины на разрыв</li>
+                                <li>Ваше состояние после разрыва</li>
+                                <li>Совет</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - ПОЛНЫЙ АНАЛИЗ ОТНОШЕНИЙ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ПОЛНЫЙ АНАЛИЗ ОТНОШЕНИЙ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Чувства и мысли партнёра
+                                </li>
+                                <li>
+                                    Видит ли он будущее с вами?
+                                </li>
+                                <li>
+                                    Как он относится к вам?
+                                </li>
+                                <li>Что он ценит в вас больше всего?</li>
+                                <li>Что изменить в отношениях?</li>
+                                <li>Уровень верности партнёра?</li>
+                                <li>Проблемы в отношениях?</li>
+                                <li>Отношения его семьи к вам?</li>
+                                <li>Перспективы отношений на год?</li>
+                                <li>Возможен ли брак с партнёром?</li>
+                                <li>Совет от карт для пары?</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - ДИАГНОСТИКА ПАРЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ДИАГНОСТИКА ПАРЫ
+                            </h3>
+                            <p class="reading-lead">
+                                Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть
+                                ли шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало
+                                тяжело.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>По судьбе ли он?</li>
+                                <li>Почему проблемы между вами?</li>
+                                <li>Что сделать, чтобы улучшить отношения?</li>
+                                <li>Чему вас учат эти отношения?</li>
+                                <li>Перспективы отношений между вами? </li>
+                                <li>Были ли измены?</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - 7 ЗВЕЗД НА ТЕКУЩИЕ ОТНОШЕНИЯ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                7 ЗВЕЗД НА ТЕКУЩИЕ ОТНОШЕНИЯ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li>ВАША ЗВЕЗДА - карта которая говорит о вас и о ситуации, в которой вы находитесь</li>
+                                <li>ЗВЕЗДА ИЗБРАННИКА - карта описывает личности избранника</li>
+                                <li>ЗВЕЗДА ЛЮБВИ - карта говорит о связи между вами</li>
+                                <li>ЗВЕЗДА ОПАСНОСТИ - карта предупреждает о возможных преградах для вашей любви</li>
+                                <li>ЗВЕЗДА УДАЧИ - карта говорит о том, что поможет вашей любви</li>
+                                <li>ЗВЕЗДА ТАЙНЫХ МЫСЛЕЙ - карта помогает понять, о чём ваш избранник умалчивает?</li>
+                                <li>Отдалённая перспектива ваших отношений?</li>
+                                <li>ЗВЕЗДА БУДУЩЕГО - карта показывает, что ожидает ваш союз в будущем</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - РАЗВИТИЕ СИТУАЦИИ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                РАЗВИТИЕ СИТУАЦИИ
                             </h3>
                             <p class="reading-lead">
                                 <!--  -->
