Add readings to НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ

--- a/readings.html
+++ b/readings.html
@@ -754,7 +754,7 @@
                                 </li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
-                            <p class="reading-price">4 000 ₽</p>
+                            <p class="reading-price">6 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -981,18 +981,15 @@
                                 <!--  -->
                             </p>
                             <ul class="reading-questions">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Характеристика ситуации на данный момент</li>
+                                <li>Препятствия, которые могут возникать</li>
+                                <li>Ваши надежды</li>
+                                <li>Ваши опасения</li>
+                                <li>Причины возникновения данной ситуации?</li>
+                                <li>Каким образом данная причина оказывает на вас влияние?</li>
+                                <li>Как ситуация будет развиваться, если не предпринимать никаких действий?</li>
+                                <li>Какие действия можно предпринять чтобы повлиять на исход ситуации?</li>
+                                <li>Как разрешится ситуация в случае ваших действий</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">6 000 ₽</p>
@@ -1000,6 +997,148 @@
                                 Запросить расклад
                             </a>
                         </article>
+                        <!-- Расклады про любовь - 4  - ВОКЗАЛ НА ДВОИХ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ВОКЗАЛ НА ДВОИХ
+                            </h3>
+                            <p class="reading-lead">
+                                Покажет, что происходит между вами сейчас: его мысли, чувства, действия и ваши. Расклад
+                                для тех, кто хочет честно увидеть, насколько вы движетесь в одном направлении.
+                            </p>
+
+                            <ul class="reading-questions">
+                                <li class="reading-questions-with-title">
+                                    <p class="reading-questions-title">
+                                        Всё о нём
+                                    </p>
+                                    <ul class="reading-questions">
+                                        <li>
+                                            Его мысли о вас
+                                        </li>
+                                        <li>
+                                            Его чувства к вам
+                                        </li>
+                                        <li>
+                                            Его действия
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="reading-questions-with-title">
+                                    <p class="reading-questions-title">
+                                        Всё о вас
+                                    </p>
+                                    <ul class="reading-questions">
+                                        <li>
+                                            Ваши мысли о нём
+                                        </li>
+                                        <li>
+                                            Ваши чувства к нему.
+                                        </li>
+                                        <li>
+                                            Ваши действия
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="reading-questions-with-title">
+                                    <p class="reading-questions-title">
+                                        Перспектива отношений
+                                    </p>
+                                </li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - ПЕРСПЕКТИВЫ ОТНОШЕНИЙ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ПЕРСПЕКТИВЫ ОТНОШЕНИЙ
+                            </h3>
+                            <p class="reading-lead">
+                                Покажет, куда движется ваша связь, какие чувства у вас обоих и как изменится динамика
+                                между вами. Подходит, если отношения нестабильны, и вы хотите понять, есть ли будущее.
+                            </p>
+                            <!-- TO FIX -->
+                            <ul class="reading-questions">
+                                <li>
+                                    Сейчас как будут развиваться ваши отношения в начале
+                                </li>
+                                <li>
+                                    Потом. Что будет с отношениями дальше
+                                </li>
+                                <li>
+                                    После. Чего можно ожидать в ваших взаимоотношениях после.
+                                </li>
+                                <li>
+                                    Ваши чувства и отношения в ближайшее время.
+                                </li>
+                                <li>
+                                    Его чувства, мысли и ощущения.
+                                </li>
+                                <li>
+                                    Ваши действия в отношении ближайшее время.
+                                </li>
+                                <li>
+                                    Действия вашего любимого в ближайшей перспективе.
+                                </li>
+                                <li>
+                                    Действия, которые вам не стоит предпринимать.
+                                </li>
+                                <li>
+                                    Совет - как Вам следует себя вести
+                                </li>
+                                <li>
+                                    Перспектива отношений.
+                                </li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4  - РАЗБИТОЕ СЕРДЦЕ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                РАЗБИТОЕ СЕРДЦЕ
+                            </h3>
+                            <p class="reading-lead">
+                                Покажет, почему всё зашло в тупик, кто тянет энергию из отношений и есть ли шанс оживить
+                                связь. Для тех, кто чувствует боль, но не понимает — что именно разрушило эту любовь.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Главная проблема в отношениях
+                                </li>
+                                <li>
+                                    Как вы видите своего партнёра
+                                </li>
+                                <li>
+                                    Как партнёр видит вас
+                                </li>
+                                <li>
+                                    Негативное влияние на ваши отношения
+                                </li>
+                                <li>
+                                    К чему вы хотите привести ваши отношения
+                                </li>
+                                <li>
+                                    Кто может помочь вашим отношениям
+                                </li>
+                                <li>
+                                    Совет колоды, как вам вести себя в отношениях
+                                </li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+
                     </div>
 
                 </div>
