--- a/readings.html
+++ b/readings.html
@@ -854,9 +854,6 @@
                     </div>
                 </div>
 
-
-
-
                 <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
                 <div class="readings-carousel">
                     <div class="readings-carousel-header">
@@ -1138,25 +1135,53 @@
                                 Запросить расклад
                             </a>
                         </article>
-
                     </div>
 
                 </div>
-                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+
+                <!-- Карусель раскладов про любовь - 5 - НА НОВЫЕ ОТНОШЕНИЯ -->
                 <div class="readings-carousel">
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
                             aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <div class="readings-carousel-title">НА НОВЫЕ ОТНОШЕНИЯ</div>
                         <button class="readings-nav-btn" type="button" data-dir="next"
                             aria-label="Следующий расклад">›</button>
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
-                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <!-- Расклады про любовь - 5 - НА ЗНАКОМСТВО -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                УЙТИ ИЛИ ОСТАТЬСЯ
+                                НА ЗНАКОМСТВО
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 5 - КОЛЕСО ФОРТУНЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                КОЛЕСО ФОРТУНЫ
                             </h3>
                             <p class="reading-lead">
                                 <!--  -->
