--- a/readings.html
+++ b/readings.html
@@ -1156,21 +1156,21 @@
                                 НА ЗНАКОМСТВО
                             </h3>
                             <p class="reading-lead">
-                                <!--  -->
+                                Показывает не только внешние воздействия (сглаз, порча, привязки), но и внутренние
+                                установки и убеждения, которые мешают реализации и гармонии. Подходит для первичной
+                                проверки состояния энергии.
                             </p>
                             <ul class="reading-questions">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Будет ли ближайший год встречи с человеком для серьёзных отношений?</li>
+                                <li>Обстоятельства встречи</li>
+                                <li>Описание человека</li>
+                                <li>Готовы ли вы к серьёзным отношениям?</li>
+                                <li>Что вам мешает созданию серьёзных отношений? что вас сдерживает?</li>
+                                <li>Что поможет/приблизит вас к серьёзным отношениям?</li>
+                                <li>Если в вашем окружении человек, с которым можно построить отношения?</li>
+                                <li>Если да, в каких вы отношениях? если нет, как устроить эту встречу?</li>
+                                <li>Перспектива личной жизни ближайший год.</li>
+                                <li>Совет от карт</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">6 000 ₽</p>
@@ -1187,18 +1187,15 @@
                                 <!--  -->
                             </p>
                             <ul class="reading-questions">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Ваше нынешнее состояние</li>
+                                <li>Какая я в глазах мужчины?</li>
+                                <li>Моё ближайшее будущее в личной жизни</li>
+                                <li>Когда произойдёт встреча с мужчиной по судьбе?</li>
+                                <li>Как я узнаю его? (сигнификатор мужчины)</li>
+                                <li>Какими будут отношения?</li>
+                                <li>Что я должна о нём знать?</li>
+                                <li>Будет ли официальный брак?</li>
+                                <li>Совет</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">6 000 ₽</p>
